Fix project header spacing

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -62,6 +62,7 @@ body
 				grid-template-areas: "e e e e e e" "a a a a a a" "b b b b b b" "c c c d d d"
 				h4
 					text-align: center
+					margin-bottom: 3px
 				p 
 					font-size: 1.25em
 
